--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,17 @@ tqdm
 time
 openai
 matplotlib
+import os
+from config import model_name
+import pandas as pd
+import swifter
+import json
+import math
+from tqdm import tqdm
+from os import path
+from pathlib import Path
+import random
+from nltk.tokenize import word_tokenize
+import numpy as np
+import csv
+import importlib
